Fixed a bug in the doc, added a few links

--- a/doc/context.adoc
+++ b/doc/context.adoc
@@ -1,6 +1,8 @@
 
 === Context handling
 
+[small]#Rfr: link:http://www.glfw.org/docs/latest/group__context.html[Context handling].#
+
 [[glfw.make_context_current]]
 * *glfw.make_context_current* (_window_)
 
