--- a/doc/native.adoc
+++ b/doc/native.adoc
@@ -1,6 +1,8 @@
 
 === Native access
 
+[small]#Rfr: link:http://www.glfw.org/docs/latest/group__native.html[Native access].#
+
 Not supported.
 
 <<<
