--- a/doc/window.adoc
+++ b/doc/window.adoc
@@ -1,13 +1,17 @@
 
 === Window handling
 
+[small]#Rfr: link:http://www.glfw.org/docs/latest/group__window.html[Window handling].#
+
 [[glfw.default_window_hints]]
-* *glfw.default_window_hints* ( )
+* *glfw.default_window_hints* ( ) +
+[small]#See link:http://www.glfw.org/docs/latest/window.html#window_hints[Window creation hints].#
 
 [[glfw.window_hint]]
 * *glfw.window_hint* (_target_, _hint_) +
-[small]#_target_: '_resizable_' for GLFW_RESIZABLE, '_opengl api_' for GLFW_OPENGL_API, etc. +
-_hint_: one of the following, depending on the _target_: +
+[small]#_target_: '_resizable_' for GLFW_RESIZABLE, '_opengl api_' for GLFW_OPENGL_API, etc 
+(see link:http://www.glfw.org/docs/latest/window.html#window_hints[Window creation hints]). +
+_hint_: one of the following, depending on the _target_:
 if _target_ expects GL_TRUE or GL_FALSE: _hint_ = _true_ or _false_ (Lua boolean); +
 if _target_ expects an integer value: _hint_ = integer or the string '_don't care_'; +
 if _target_ is '_opengl api_': _hint_ = '_opengl_' or '_open es_'; +
