Removed .png logo

--- a/doc/index.adoc
+++ b/doc/index.adoc
@@ -9,7 +9,7 @@ v0.6, 2016-06-01
 :source-language: lua
 :examplesdir: ../examples
 
-image::powered-by-lua.png[Lua logo, link=http://www.lua.org]
+image::powered-by-lua.gif[Lua logo, link=http://www.lua.org]
 
 include::preface.adoc[]
 
