--- a/doc/bindings.adoc
+++ b/doc/bindings.adoc
@@ -6,6 +6,8 @@ http://www.glfw.org/docs/latest/modules.html[GLFW Reference documentation].
 
 All the functions listed in the following sections are members of the *glfw* table.
 
+Functions tagged with _NONGLFW_ are MoonGLFW additions that do not map directly to GLFW functions.
+
 include::context.adoc[]
 
 include::initialization.adoc[]
