--- a/doc/window.adoc
+++ b/doc/window.adoc
@@ -14,7 +14,7 @@
 _hint_: one of the following, depending on the _target_:
 if _target_ expects GL_TRUE or GL_FALSE: _hint_ = _true_ or _false_ (Lua boolean); +
 if _target_ expects an integer value: _hint_ = integer or the string '_don't care_'; +
-if _target_ is '_opengl api_': _hint_ = '_opengl_' or '_open es_'; +
+if _target_ is '_client api_': _hint_ = '_no api_', '_opengl_' or '_open es_'; +
 if _target_ is '_opengl profile_': _hint_ = '_any_', '_core_' or '_compat_'; +
 if _target_ is '_context robustness_': _hint_ = '_no robustness_', '_no reset notification_', or '_lose context on reset_'; +
 if _target_ is '_context release behavior_': _hint_ = '_any_', '_flush_' or '_none_'.#
