--- a/doc/window.adoc
+++ b/doc/window.adoc
@@ -41,6 +41,11 @@ _boolean_ = *window_should_close*(_window_)
 [[set_window_title]]
 * *set_window_title*(_window_, _title_)
 
+[[set_window_icon]]
+* *set_window_icon*(_window_, _width_, _height_, _pixels_ [, _..._]) +
+[small]#_width_, _height_, _pixels_: the image (2 integers and a binary string). +
+Other images (up to 32) can be added in the variadic part in the same way.#
+
 [[get_window_pos]]
 * *set_window_pos*(_window_, _xpos_, _ypos_) +
 _xpos_, _ypos_ = *get_window_pos*(_window_)
