--- a/doc/index.adoc
+++ b/doc/index.adoc
@@ -2,6 +2,7 @@
 Stefano Trettel
 v0.9, 2017-04-11
 :toc: left
+:toclevels: 3
 :stylesdir: ./
 :stylesheet: colony.css
 :source-highlighter: pygments
